--- a/css/styles.css
+++ b/css/styles.css
@@ -347,11 +347,32 @@ nav {
   margin-right: 30px;
 }
 
+.section-item-box {
+  display: flex;
+  width: 270px;
+  height: 120px;
+
+  background-color: var(--color-bg-hero);
+  border: 1px solid var(--color-bg-hero);
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-item-box:hover,
+.section-item-box:focus {
+  border-color: var(--accent-color);
+}
+
 .item-icon {
   width: 70px;
   height: 70px;
-  padding: 25px 100px;
-  background-color: var(--color-bg-hero);
+}
+
+.item-icon:hover,
+.item-icon:focus {
+  background-color: var(--accent-color);
+  /* fill: var(--accent-color); */
 }
 
 .section-title {
@@ -539,6 +560,7 @@ nav {
 
 .clients-box {
   display: flex;
+  /* формули не працьують чомусь */
   /* flex-basis: calc(100% / 6 - 150px);
   flex-basis: calc((100% - 150px) / 6); */
   gap: 30px;
@@ -556,7 +578,7 @@ nav {
 
 .clients-meta:hover,
 .clients-meta:focus {
-  background-color: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .clients-link {
@@ -564,15 +586,15 @@ nav {
   padding: 16px 32px;
 }
 
-.clients-icon:hover,
-.clients-icon:focus {
-  fill: var(--accent-color);
-}
-
 .clients-icon {
   width: 106px;
   height: 60px;
 }
+
+/* .clients-icon:hover,
+.clients-icon:focus {
+  fill: var(--accent-color);
+} */
 
 /* підвал */
 
