--- a/css/styles.css
+++ b/css/styles.css
@@ -363,32 +363,37 @@ nav {
 }
 
 .section-item-box {
-  display: flex;
   width: 270px;
   height: 120px;
 
   background-color: var(--color-bg-hero);
   border: 1px solid var(--color-bg-hero);
   border-radius: 4px;
+
+  display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
 }
 
-.section-item-box:hover,
+/* .section-item-box:hover,
 .section-item-box:focus {
   border-color: var(--accent-color);
-}
+} */
 
 .item-icon {
   width: 70px;
   height: 70px;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
 }
 
-.item-icon:hover,
+/* .item-icon:hover,
 .item-icon:focus {
   background-color: var(--accent-color);
-  /* fill: var(--accent-color); */
-}
+  fill: var(--accent-color);
+} */
 
 .section-title {
   margin-bottom: 10px;
@@ -575,16 +580,23 @@ nav {
 
   gap: 30px;
   justify-content: center;
+  align-items: center;
+}
+
+.clients-meta:hover,
+.clients-meta:focus {
+  border-color: var(--accent-color);
 }
 
 .clients-link {
   display: flex;
-  padding: 16px 32px;
   width: 170px;
   height: 92px;
-
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .clients-link:hover,
